package org.jetbrains.jpsservice;

option java_package = "org.jetbrains.jpsservice";
option optimize_for = LITE_RUNTIME;

message Message {

  message UUID {
    required sint64 most_sig_bits = 1;
    required sint64 least_sig_bits = 2;
  }

  enum Type {
    REQUEST = 1;
    RESPONSE = 2;
    FAILURE = 3;
  }

  message Failure {
    optional int32 error_code = 1;
    optional string description = 2;
    optional string stacktrace = 3;
  }

  message Request {
    enum Type {
      COMPILE_REQUEST = 1;
      SHUTDOWN_COMMAND = 2;
    }

    message CompilationRequest {
      enum Type {
        REBUILD = 1;
        MAKE = 2;
        CLEAN = 3;
        CANCEL = 4;
      }
      required Type command_type = 1;
      optional string project_id = 2;
      repeated string module_name = 4;
    }

    message ShutdownCommand {
      enum ShutdownPolicy {
        CANCEL_RUNNING_BUILDS = 1;
        WAIT_RUNNING_BUILDS = 2;
      }
      required ShutdownPolicy shutdownPolicy = 1;
    }

    required Type request_type = 1;
    optional CompilationRequest compile_request = 2;
    optional ShutdownCommand shutdown_command = 3;
  }

  message Response {
    enum Type {
      COMMAND_RESPONSE = 1;
      COMPILE_MESSAGE = 2;
    }

    message CommandResponse {
      enum Type {
        COMMAND_ACCEPTED = 1;
        COMMAND_REJECTED = 2;
        BUILD_COMPLETED = 3;
        BUILD_CANCELED = 4;
      }
      required Type command_type = 1;
      optional string description = 2;
    }

    message CompileMessage {
      enum Kind {
        ERROR = 1;
        WARNING = 2;
        INFO = 3;
        PROGRESS = 4;
      }
      required Kind kind = 1;
      optional string text = 2;
      optional string source_file_path = 3;
      optional uint32 line = 4;
      optional uint32 column = 5;
    }

    required Type response_type = 1;
    optional CommandResponse command_response = 2;
    optional CompileMessage compile_message = 3;
  }

  required UUID session_id = 1;
  required Type message_type = 2;
  optional Request request = 3;
  optional Response response = 4;
  optional Failure failure = 5;
}


